--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,24 @@ body main{
     max-width: 800px;
     margin: 0 auto;
     padding-bottom: 500px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+body main form input{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 15px;
+}
+
+body main form textarea{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 15px;
 }
 
 body{
     margin: 0;
     background-color: cyan;
     padding: 20px;
-    line-height: 30px;
+    line-height: 27px;
 }
 
 footer{
@@ -27,6 +38,7 @@ footer{
     padding: 50px;
     margin: 0;
     text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .button1 {
