--- a/css/style.css
+++ b/css/style.css
@@ -30,15 +30,18 @@ body{
     background-color: cyan;
     padding: 20px;
     line-height: 27px;
+    min-height: 100%;
 }
 
 footer{
     background-color: navy;
     color: white;
-    padding: 50px;
+    min-height: 100px;
+    padding-top: 10px;
     margin: 0;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: auto;
 }
 
 .button1 {
