--- a/css/style.css
+++ b/css/style.css
@@ -118,16 +118,39 @@ body main form textarea:focus {
     position: absolute;
     top: calc(100% + .20rem);
     background-color: darkblue;
-    color: lightblue;
+    color: white;
     padding: .25rem;
     border-radius: .25rem;
     box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, .1);
     opacity: 0;
-    transition: opacity 100ms ease-in-out;
+    transform: translateY(-10px);
+    transition: opacity 100ms ease-in-out, transform 100ms ease-in-out;
     pointer-events: none;
 }
 
 .dropdown-menu.active {
     opacity: 1;
     pointer-events: auto;
+    transform: translateY(0px);
+}
+
+.info-grid {
+    display: grid;
+    grid-template-columns: repeat(1, max-content);
+    gap: 2rem;
+}
+
+.subject {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+}
+
+.subjectLink {
+    color: white;
+    text-underline-position: none;
+}
+
+.subjectLink:link{
+    text-decoration: none;
 }
